--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -2,5 +2,7 @@
 <classpath>
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
+    <classpathentry kind="lib" path="lib/jh.jar"/>
+    <classpathentry kind="lib" path="lib/GIFOutput.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
