--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -5,6 +5,6 @@
         rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
     <classpathentry exported="true" kind="lib" path="lib/jh.jar"/>
     <classpathentry exported="true" kind="lib" path="lib/GIFOutput.jar"/>
-    <classpathentry exported="true" kind="lib" path="H:/Meus documentos/programas/JBuilder6/lib/junit.jar"/>
+    <classpathentry kind="lib" path="lib/junit.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
