--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -3,8 +3,8 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry exported="true" kind="var" path="JRE_LIB"
         rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
-    <classpathentry exported="true" kind="lib" path="lib/jh.jar"/>
     <classpathentry exported="true" kind="lib" path="lib/GIFOutput.jar"/>
     <classpathentry kind="lib" path="lib/junit.jar"/>
+    <classpathentry kind="lib" path="lib/jh.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
