--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="src"/>
-    <classpathentry exported="true" kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
-    <classpathentry exported="true" kind="lib" path="lib/GIFOutput.jar"/>
-    <classpathentry kind="lib" path="lib/junit.jar"/>
-    <classpathentry kind="lib" path="lib/jh.jar"/>
-    <classpathentry exported="true" kind="lib" path="lib/plot.jar"/>
-    <classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
+	<classpathentry exported="true" kind="lib" path="lib/GIFOutput.jar"/>
+	<classpathentry kind="lib" path="lib/junit.jar"/>
+	<classpathentry kind="lib" path="lib/jh.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/plot.jar"/>
+	<classpathentry kind="lib" path="lib/xalan.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
