Correções na árvore de fórmula dos nós de contexto e adicionamento das livrarias do PowerLoom e do Stella para inicio da fase de resolução dos nós de contexto.

--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -21,5 +21,7 @@
 	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/protege-owl.jar"/>
 	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/xalan.jar"/>
+	<classpathentry kind="lib" path="lib/powerloom/powerloom.jar"/>
+	<classpathentry kind="lib" path="lib/powerloom/stella.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
