--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -1,27 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
-	<classpathentry kind="lib" path="lib/GIFOutput.jar"/>
-	<classpathentry kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/plot.jar"/>
-	<classpathentry kind="lib" path="lib/jh.jar"/>
-	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="lib/jaxme/jaxmexs-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxme/jaxme2-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxme/jaxme2-rt-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxme/jaxmeapi-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxme/jaxmejs-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxme/jaxmepm-0.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/commons-logging.jar"/>
-	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/icu4j_3_4.jar"/>
-	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/iri.jar"/>
-	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/jena.jar"/>
-	<classpathentry kind="lib" path="lib/protege/protege.jar"/>
-	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/protege-owl.jar"/>
-	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="lib/xalan.jar"/>
-	<classpathentry kind="lib" path="lib/powerloom/powerloom.jar"/>
-	<classpathentry kind="lib" path="lib/powerloom/stella.jar"/>
+	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/UnBBayes_LIB"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
