--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -3,5 +3,35 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/UnBBayes_LIB"/>
+	<classpathentry kind="lib" path="lib/GIFOutput.jar"/>
+	<classpathentry kind="lib" path="lib/jh.jar"/>
+	<classpathentry kind="lib" path="lib/junit.jar"/>
+	<classpathentry kind="lib" path="lib/plot.jar"/>
+	<classpathentry kind="lib" path="lib/xalan.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="lib/protege/protege.jar"/>
+	<classpathentry kind="lib" path="lib/jaxme/jaxme2-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxme/jaxme2-rt-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxme/jaxmeapi-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxme/jaxmejs-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxme/jaxmepm-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jaxme/jaxmexs-0.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/powerloom/powerloom.jar"/>
+	<classpathentry kind="lib" path="lib/powerloom/stella.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/commons-lang-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/edtftpj-1.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/ekitspell.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/icu4j_3_4.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/iri.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/jcalendar.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/jena.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/json.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/kazuki.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/log4j-1.2.12.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/owlsyntax.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/protege-owl.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/stax-api-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/protege/edu.stanford.smi.protegex.owl/xercesImpl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
