--- a/UnBBayes/.settings/org.eclipse.jdt.ui.prefs
+++ b/UnBBayes/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
-#Wed Sep 21 19:32:05 BRT 2005
+#Wed May 30 19:54:05 GMT 2007
 eclipse.preferences.version=1
+formatter_settings_version=8
 internal.default.compliance=default
