--- a/UnBBayes/.settings/org.eclipse.core.resources.prefs
+++ b/UnBBayes/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Wed May 30 20:35:26 GMT 2007
+#Fri Jun 08 13:17:56 BRT 2007
 eclipse.preferences.version=1
 encoding//src/unbbayes/prs/mebn/compiler/Compiler.java=UTF-8
 encoding/<project>=UTF-8
