--- a/CursoNivelamento/pom.xml
+++ b/CursoNivelamento/pom.xml
@@ -16,6 +16,11 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    <dependency>
+      <groupId>asdf</groupId>
+      <artifactId>asdf</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 </project>
 
