--- a/CursoNivelamento/pom.xml
+++ b/CursoNivelamento/pom.xml
@@ -17,6 +17,11 @@
       <version>3.8.1</version>
     </dependency>
     <dependency>
+      <groupId>javax.faces</groupId>
+      <artifactId>jsf-impl</artifactId>
+      <version>1.2-b19</version>
+    </dependency>
+    <dependency>
       <groupId>asdf</groupId>
       <artifactId>asdf</artifactId>
       <version>1.0.0</version>
