--- a/CursoNivelamento/pom.xml
+++ b/CursoNivelamento/pom.xml
@@ -1,26 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>br.unb.cic</groupId>
-  <artifactId>curso-nivelamento</artifactId>
-  <version>1.0</version>
-  <description>Este é apenas um teste do maven no projeto de nivelamento.</description>
-  <dependencies>
-    <dependency>
-      <groupId>ant</groupId>
-      <artifactId>ant-junit</artifactId>
-      <version>1.6.5</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.faces</groupId>
-      <artifactId>jsf-impl</artifactId>
-      <version>1.2-b19</version>
-    </dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>br.unb.cic</groupId>
+	<artifactId>curso-nivelamento</artifactId>
+	<version>1.0</version>
+	<description>
+		Este é apenas um teste do maven no projeto de nivelamento.
+	</description>
+	<dependencies>
+		<dependency>
+			<groupId>ant</groupId>
+			<artifactId>ant-junit</artifactId>
+			<version>1.6.5</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>1.2-b19</version>
+		</dependency>
+	</dependencies>
+	<build>
+	</build>
+	<reporting>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jxr-plugin</artifactId>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<configuration>
+						<aggregate>true</aggregate>
+						<links>
+							<link>
+								http://java.sun.com/j2se/1.5.0/docs/api
+							</link>
+							<link>
+								http://plexus.codehaus.org/ref/1.0-alpha-9/apidocs
+							</link>
+						</links>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-pmd-plugin</artifactId>
+					<configuration>
+						<rulesets>
+							<ruleset>/rulesets/basic.xml</ruleset>
+							<ruleset>/rulesets/imports.xml</ruleset>
+							<ruleset>/rulesets/unusedcode.xml</ruleset>
+							<ruleset>/rulesets/finalizers.xml</ruleset>
+						</rulesets>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-checkstyle-plugin</artifactId>
+					<configuration>
+						<configLocation>
+							config/maven_checks.xml
+						</configLocation>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>taglist-maven-plugin</artifactId>
+					<configuration>
+						<tags>
+							<tag>TODO</tag>
+							<tag>@todo</tag>
+							<tag>FIXME</tag>
+							<tag>XXX</tag>
+						</tags>
+					</configuration>
+				</plugin>
+			</plugins>
+		</reporting>
 </project>
 
