--- a/UnBBayes/.settings/org.eclipse.core.resources.prefs
+++ b/UnBBayes/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,3 @@
-#Fri Jun 08 13:17:56 BRT 2007
+#Wed Oct 03 11:25:07 GMT-03:00 2007
 eclipse.preferences.version=1
 encoding//src/unbbayes/prs/mebn/compiler/Compiler.java=UTF-8
-encoding/<project>=UTF-8
