updated some test suites

--- a/UnBBayes/.settings/org.eclipse.core.resources.prefs
+++ b/UnBBayes/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Oct 03 11:25:07 GMT-03:00 2007
+#Mon Oct 15 13:01:08 GMT-03:00 2007
 eclipse.preferences.version=1
 encoding//src/unbbayes/prs/mebn/compiler/Compiler.java=UTF-8
+encoding/<project>=UTF-8
