--- a/UnBBayes/.settings/org.eclipse.jdt.ui.prefs
+++ b/UnBBayes/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Wed May 30 19:54:05 GMT 2007
+#Sun Aug 05 19:31:47 BRT 2007
 eclipse.preferences.version=1
-formatter_settings_version=8
+formatter_settings_version=11
 internal.default.compliance=default
