--- a/UnBBayes/DataMining.ini
+++ b/UnBBayes/DataMining.ini
@@ -1,5 +1,5 @@
 [data mining]
-Maximum states = 40000000
+Maximum states = 4000
 Confidence limit = 100
 Language = Portuguese
 Look and Feel = Metal
