--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -1,71 +1,161 @@
-<?xml version="1.0" encoding="UTF-8"?><project>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>br.unb.cic</groupId>
-  <artifactId>unbbayesbayesontology</artifactId>
-  <name>UnBBayesBayesOntology</name>
-  <version>3.1-SNAPSHOT</version>
-  <url>http://unbbayes.sourceforge.net</url>
-  <inceptionYear>2001</inceptionYear>
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-site-plugin</artifactId>
-        <configuration>
-          <locales>en</locales>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>javax.help</groupId>
-      <artifactId>javahelp</artifactId>
-      <version>2.0.02</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-    </dependency>
-    <dependency>
-      <groupId>ptolomy.plot</groupId>
-      <artifactId>plot</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>xalan</groupId>
-      <artifactId>xalan</artifactId>
-      <version>2.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>xml-apis</groupId>
-      <artifactId>xml-apis</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>edu.stanford.smi</groupId>
-      <artifactId>protege</artifactId>
-      <version>1.0</version>
-    </dependency>
-  </dependencies>
-  <reporting>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </reporting>
-  <distributionManagement>
-    <site>
-      <id>website</id>
-      <url>ftp://sourceforge.net/www/u/un/unbbayes</url>
-    </site>
-  </distributionManagement>
+<?xml version="1.0" encoding="UTF-8"?>
+<project>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>br.unb.cic</groupId>
+	<artifactId>unbbayesbayes</artifactId>
+	<name>UnBBayesBayesOntology</name>
+	<version>3.1-SNAPSHOT</version>
+	<url>http://unbbayes.sourceforge.net</url>
+	<inceptionYear>2001</inceptionYear>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<configuration>
+					<locales>en</locales>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.ws.jaxme</groupId>
+				<artifactId>maven-jaxme-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jaxme</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<target>src/main/java</target>
+					<schemas>
+						<value>src/main/xsd/*.xsd</value>
+					</schemas>
+					<packageName>unbbayes.io.xmlclasses</packageName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>GIFOutput</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.help</groupId>
+			<artifactId>javahelp</artifactId>
+			<version>2.0.02</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>plot</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxme</groupId>
+			<artifactId>jaxme2</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxme</groupId>
+			<artifactId>jaxme2-rt</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxme</groupId>
+			<artifactId>jaxmeapi</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxme</groupId>
+			<artifactId>jaxmejs</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>jaxme</groupId>
+			<artifactId>jaxmexs</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>icu4j</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>iri</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>jena</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>protege-owl</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>protege</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>powerloom</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>stella</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>miglayout15-swing</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+	</dependencies>
+	<reporting>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
+	<distributionManagement>
+		<site>
+			<id>website</id>
+			<url>ftp://sourceforge.net/www/u/un/unbbayes</url>
+		</site>
+	</distributionManagement>
 </project>
