--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -34,8 +34,12 @@
 				</executions>
 				<configuration>
 					<!-- BEGIN - this is a work around, because the plugin does not to work as documented -->
-					<target>${project.build.directory}/target/jaxme/java</target>
-					<resourceTarget>${project.build.directory}/../target/jaxme/resources</resourceTarget>
+					<target>
+						${project.build.directory}/target/jaxme/java
+					</target>
+					<resourceTarget>
+						${project.build.directory}/../target/jaxme/resources
+					</resourceTarget>
 					<!--  END  - this is a work around, because the plugin does not to work as documented -->
 					<schemas>
 						<value>src/main/xsd/*.xsd</value>
@@ -152,6 +156,66 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-surefire-report-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<links>
+						<link>
+							http://java.sun.com/j2se/1.5.0/docs/api
+						</link>
+					</links>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<configuration>
+					<rulesets>
+						<ruleset>/rulesets/basic.xml</ruleset>
+						<ruleset>/rulesets/imports.xml</ruleset>
+						<ruleset>/rulesets/unusedcode.xml</ruleset>
+						<ruleset>/rulesets/finalizers.xml</ruleset>
+					</rulesets>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<configLocation>
+						config/maven_checks.xml
+					</configLocation>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>taglist-maven-plugin</artifactId>
+				<configuration>
+					<tags>
+						<tag>TODO</tag>
+						<tag>@todo</tag>
+						<tag>FIXME</tag>
+						<tag>XXX</tag>
+					</tags>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>clirr-maven-plugin</artifactId>
+				<configuration>
+					<minSeverity>info</minSeverity>
+				</configuration>
 			</plugin>
 		</plugins>
 	</reporting>
