--- a/UnBBayes/.project
+++ b/UnBBayes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>UnBBayes</name>
+	<name>UnBBayesOntology</name>
 	<comment></comment>
 	<projects>
 		<project>unbbayes</project>
