--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -2,9 +2,9 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.unb.cic</groupId>
-	<artifactId>unbbayesbayes</artifactId>
-	<name>UnBBayesBayesOntology</name>
-	<version>3.1-SNAPSHOT</version>
+	<artifactId>unbbayes</artifactId>
+	<name>UnBBayes PR-OWL</name>
+	<version>3.1</version>
 	<url>http://unbbayes.sourceforge.net</url>
 	<inceptionYear>2001</inceptionYear>
 	<build>
@@ -16,6 +16,30 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>unbbayes.Main</mainClass>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib</classpathPrefix>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+						<descriptor>src/assembly/dist.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
 				<configuration>
