--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>br.unb.cic</groupId>
 	<artifactId>unbbayes</artifactId>
 	<name>UnBBayes</name>
-	<version>3.0.1-ALPHA</version>
+	<version>3.3.25-BETA</version>
 	<url>http://unbbayes.sourceforge.net</url>
 	<licenses>
 		<license>
