--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -199,26 +199,53 @@
 		</plugins>
 	</build>
 	<dependencies>
+	
+		<!-- PANEL-AS-IMAGE -->
 		<dependency>
+			<!-- Used for saving BN, ID, MSBN, etc as images. -->
 			<groupId>guess</groupId>
 			<artifactId>GIFOutput</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<!-- PANEL-AS-IMAGE -->
+		
+		<!-- JAVAHELP -->
 		<dependency>
+			<!-- JavaHelp is an open source software, a full-featured, platform-independent,
+			 extensible help system that enables you to incorporate online help in applets,
+			 components, applications, operating systems, and devices. 
+			 http://java.sun.com/javase/technologies/desktop/javahelp/ -->
 			<groupId>javax.help</groupId>
 			<artifactId>javahelp</artifactId>
 			<version>2.0.02</version>
 		</dependency>
+		<!-- JAVAHELP -->
+		
+		<!-- PLOT-GRAPHICS -->
 		<dependency>
+			<!-- Used for plotting some graphics. -->
 			<groupId>guess</groupId>
 			<artifactId>plot</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<!-- PLOT-GRAPHICS -->
+		
+		<!-- JUNIT -->
 		<dependency>
+			<!-- JUnit is a simple framework to write repeatable tests. 
+			It is an instance of the xUnit architecture for unit testing 
+			frameworks. 
+			http://junit.sourceforge.net/ -->
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<!-- JUNIT -->
+		
+		<!-- JAXME/JAXB -->
+		<!-- JaxMe 2 is an open source implementation of JAXB, the specification 
+		for Java/XML binding. 
+		http://ws.apache.org/jaxme/ -->
 		<dependency>
 			<groupId>jaxme</groupId>
 			<artifactId>jaxme2</artifactId>
@@ -244,61 +271,118 @@
 			<artifactId>jaxmexs</artifactId>
 			<version>0.5.1</version>
 		</dependency>
+		<!-- JAXME/JAXB -->
+		
+		<!-- XALAN -->
 		<dependency>
+			<!-- Xalan-Java is an XSLT processor for transforming XML documents into 
+			HTML, text, or other XML document types. It implements XSL Transformations 
+			(XSLT) Version 1.0 and XML Path Language (XPath) Version 1.0 and can be 
+			used from the command line, in an applet or a servlet, or as a module 
+			in other program. 
+			http://xml.apache.org/xalan-j/ -->
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<!-- XALAN -->
+		
+		<!-- COMMONS-LOGGING -->
 		<dependency>
+			<!-- The Logging package is an ultra-thin bridge between different 
+			logging implementations. A library that uses the commons-logging 
+			API can be used with any logging implementation at runtime. 
+			http://commons.apache.org/logging/ -->
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<!-- COMMONS-LOGGING -->
+		
+		<!-- PROTEGE-OWL -->
 		<dependency>
+			<!-- ICU is a mature, widely used set of C/C++ and Java libraries 
+			providing Unicode and Globalization support for software applications.
+			Necessary for Protege. 
+			http://www.icu-project.org/ -->
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
 			<version>3.8</version>
 		</dependency>
 		<dependency>
+			<!-- Necessary for Protege. -->
 			<groupId>guess</groupId>
 			<artifactId>iri</artifactId>
 			<version>2.4</version>
 		</dependency>
 		<dependency>
+			<!-- Jena is a Java framework for building Semantic Web applications.
+			It provides a programmatic environment for RDF, RDFS and OWL, SPARQL 
+			and includes a rule-based inference engine.
+			Necessary for Protege.
+			http://jena.sourceforge.net/ -->
 			<groupId>guess</groupId>
 			<artifactId>jena</artifactId>
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>guess</groupId>
-			<artifactId>protege-owl</artifactId>
-			<version>3.2</version>
-		</dependency>
-		<dependency>
+			<!-- The Xerces Java Parser 1.4.4 supports the XML 1.0 recommendation 
+			and contains advanced parser functionality, such as support for the 
+			W3C's XML Schema recommendation version 1.0, DOM Level 2 version 1.0, 
+			and SAX Version 2, in addition to supporting the industry-standard DOM 
+			Level 1 and SAX version 1 APIs. 
+			Necessary for Protege. 
+			http://xerces.apache.org/xerces-j/ -->
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.8.1</version>
 		</dependency>
 		<dependency>
-			<groupId>guess</groupId>
-			<artifactId>protege</artifactId>
-			<version>3.2</version>
-		</dependency>
-		<dependency>
+			<!-- PowerLoom is a full-function, logic-based knowledge representation 
+			and reasoning system, that supports all aspects of knowledge-based 
+			applications. 
+			http://www.isi.edu/isd/LOOM/PowerLoom/documentation/manual/manual_2.html -->
 			<groupId>guess</groupId>
 			<artifactId>powerloom</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
+			<!-- STELLA is a strongly typed, object-oriented, Lisp-like language, 
+			designed to facilitate symbolic programming tasks in artificial intelligence 
+			applications. Necessary for PowerLoom. 
+			http://www.isi.edu/isd/LOOM/Stella/ -->
 			<groupId>guess</groupId>
 			<artifactId>stella</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
+			<!-- Protégé is a free, open source ontology editor and knowledge-base 
+			framework. 
+			http://protege.stanford.edu/-->
+			<groupId>guess</groupId>
+			<artifactId>protege</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<dependency>
+			<!-- The Protégé-OWL editor is an extension of Protégé that supports 
+			the Web Ontology Language (OWL). 
+			http://protege.stanford.edu/overview/protege-owl.html -->
+			<groupId>guess</groupId>
+			<artifactId>protege-owl</artifactId>
+			<version>3.2</version>
+		</dependency>
+		<!-- PROTEGE-OWL -->
+		
+		<!-- MIGLAYOUT -->
+		<dependency>
+			<!-- MiGLayout is the most versatile and flexible Swing and SWT Layout 
+			Manager for Java, yet it is very easy to learn and use. 
+			http://www.miglayout.com/ -->
 			<groupId>guess</groupId>
 			<artifactId>miglayout15-swing</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<!-- MIGLAYOUT -->
 
 	</dependencies>
 	<!-- reporting>
