--- a/UnBBayes/.classpath
+++ b/UnBBayes/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry excluding="**/*.java" including="**" kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.devzuz.q.maven.jdt.core.mavenClasspathContainer"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/danby.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
