--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -321,6 +321,14 @@
 			<version>0.5.1</version>
 		</dependency>
 		<!-- JAXME/JAXB -->
+		
+		<!-- DANBY -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>danby</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<!-- DANBY -->
 
 		<!-- XALAN -->
 		<dependency>
