Tryed some other optimizations, configurable by appliciation.properties. Also, added a lightweight LahoreBombing which actually runs well and is semantically equivalent to previous LahoreBombing. Also, added an option to run MEBN query at commandline without starting GUI - this may become a sample for UnBBayes-MEBN as API.

--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -5,3 +5,9 @@ unbbayes.io.NetworkCompilationLogManager.enabled=true
 unbbayes.prs.mebn.ssbn.util.SSBNDebugInformationUtil.enabled=true
 # declares or not pseudocode Compiler as singleton
 unbbayes.prs.mebn.compiler.Compiler.singleton=true
+# declares if we should clean simple ssbn node when generating LPD
+unbbayes.prs.mebn.ssbn.BuilderLocalDistributionImpl.clearSimpleSSBNNodeListAtLPD=true
+# On true, tells MultiEntityBayesianNetwork to keep track of non-PR-OWL ontoloty
+unbbayes.prs.mebn.MultiEntityBayesianNetwork.useStorageImplementor=true
+# tells ssbn generation to log all nodes and its probabilities.
+unbbayes.controller.MEBNController.toLogNodesAndProbabilities=false
