changed the package of the TextLogManager class

--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # enables/disables logging using TextLogManager
-unbbayes.io.TextLogManager.enabled=true
+unbbayes.io.log.TextLogManager.enabled=true
 unbbayes.io.NetworkCompilationLogManager.enabled=true
 # enables/disables logging for ssbn generation
 unbbayes.prs.mebn.ssbn.util.SSBNDebugInformationUtil.enabled=true
